--- a/conf/statboosterreroller.conf.dist
+++ b/conf/statboosterreroller.conf.dist
@@ -1,35 +1,23 @@
-#
-# Copyright (C) 2016+ AzerothCore <www.azerothcore.org>, released under GNU AGPL v3 license: https://github.com/azerothcore/azerothcore-wotlk/blob/master/LICENSE-AGPL3
-#
-
 [worldserver]
-
 ########################################
-# Stat Booster Reroller
+
+#属性增强重掷器
 ########################################
-#
-#    StatBoostReroll.Enable
-#        Description: Enable/disable the re-roll item mechanic.
-#        Default:     0 - Disabled
-#                     1 - Enabled
-#
 
-StatBoostReroll.Enable = 0
+#StatBoostReroll.Enable
+#描述: 启用/禁用物品重掷机制。
+#默认值: 0 - 禁用
+#1 - 启用
+StatBoostReroll.Enable = 1
 
-#
-#    StatBoostReroll.VisualId
-#        Description: The spell id for the visual when an item is successfully re-rolled.
-#        Default:     62015 - Test Visual
-#
-
+#StatBoostReroll.VisualId
+#描述: 当物品成功重掷时，显示的法术ID。
+#默认值: 62015 - 测试视觉效果
 StatBoostReroll.VisualId = 62015
 
-#
-#    StatBoostReroll.AllowOwnedItemsOnly
-#        Description: Enable/disable the re-rolling of owned items only.
-#        Note: This avoids players being able to re-roll other players items.
-#                     0 - Disabled
-#        Default:     1 - Enabled
-#
-
+#StatBoostReroll.AllowOwnedItemsOnly
+#描述: 启用/禁用仅限自己拥有的物品的重掷。
+#注意: 这避免了玩家能够重掷其他玩家的物品。
+#0 - 禁用
+#默认值: 1 - 启用
 StatBoostReroll.AllowOwnedItemsOnly = 1
